# workspace

./: CLAUDE.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.nx/cache/: run.json
.nx/cache/terminalOutputs/: 2613311530046456308
.nx/workspace-data/: BA2023A2-8D25-5B16-8CF8-42491A35E44D.db-shm  BA2023A2-8D25-5B16-8CF8-42491A35E44D.db-wal  file-map.json  lockfile-dependencies.hash  nx_files.nxt  parsed-lock-file.dependencies.json  parsed-lock-file.nodes.json  project-graph.json  source-maps.json
.nx/workspace-data/d/: server-process.json
brain/: agenda.yaml  project.json  state.json  tools.yaml
brain/agents/: curator.md  exploration.md  reflection.md  synthesis.md
brain/context/: ideation-protocol.md
brain/context/domains/: _template.md  ai-landscape-2025.md  distribution-2025.md  sports-betting-2025.md
brain/context/principles/: product-thinking.md  what-to-avoid.md
brain/context/threads/: _template.md  puckcast.md  saas-futures.md
brain/context/vocabulary/: terms.md
brain/context/worldview/: ai-assumptions.md  beliefs.md  market-shifts.md
brain/graph/: attention.yaml  entities.yaml  judgments.yaml  predictions.yaml  reasoning.yaml  relationships.yaml
brain/human/: experience.yaml  goals.yaml  interactions.yaml  network.yaml  patterns.yaml  profile.yaml
brain/human/analysis/: __init__.py  run_all.py  (+3 more)
brain/projects/: _template.yaml  context-library.yaml  hive.yaml
brain/protocols/: evaluate-codebase.md
brain/sdk/python/: pyproject.toml
brain/sdk/python/brain/: __init__.py  brain.py  loaders.py  types.py
(+9 files in other folders)
